deploy/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: stresty
  name: stresty
